attempting to fix audio

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <p>Music for while you explore the site</p>
             <audio
                 controls
-                src="/media/waiting-music-116216.mp3">
-                    <a href="/media/waiting-music-116216.mp3"></a>
+                src="/media/waiting-music-116216.mp3" type = "audio/mpeg">
             </audio>
             <p>This site will record what happened in today's mock meeting</p>
             <h2>Meeting Topic:software engineering</h2>
