--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Music for while you explore the site</p>
             <audio
                 controls
-                src="/media/waiting-music-116216.mp3" type = "audio/mpeg">
+                src="media/waiting-music-116216.mp3" type = "audio/mpeg">
             </audio>
             <p>This site will record what happened in today's mock meeting</p>
             <h2>Meeting Topic:software engineering</h2>
@@ -48,7 +48,7 @@
                     <li>Definition of a SWE</li>
                     <p><strong>Must watch video on what its like being a SWE</strong></p>
                     <video controls width="250">
-                        <source src="/media/What Does A Software Engineer Actually Do_.mp4" type="video/mp4">
+                        <source src="media/What Does A Software Engineer Actually Do_.mp4" type="video/mp4">
                     </video>
                     <li>How to be a good SWE</li>
                         <ol>
