--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meeting Minutes</title>
-    <link rel = "icon" href= "media/favicon.ico"/>
-  </head>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
   <body>
     <main>
         <section>
@@ -34,7 +34,7 @@
                 <li><a href="#Content_Covered">Content Covered</a></li>
                 </ul>
             </nav>
-            <div class = "Members Present">
+            <div class = "Members_Present">
                 <h3>Members Present</h3>
                 <details>
                     <summary>Disclaimer</summary>
