--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meeting Minutes</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="ChivoMono-VariableFont_wght.ttf">
+
 </head>
   <body>
     <main>
@@ -86,6 +88,8 @@
             <textarea id="comments" rows="3" cols="40">This site needs more...</textarea>
         
             <hr>
+        
+            <p style="font-size: 16px; color: red; font-family: Arial, sans-serif;">styled text.</p>
 
         <label for="visitor_type">Who is visiting this site:</label>
         <input list="types" id="visitor_type" name="visitor type">
